// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio Component > props.checked is equal to true 1`] = `
<label
  class="t-radio t-is-checked"
  tabindex="0"
>
  <input
    class="t-radio__former"
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    <!---->
  </span>
</label>
`;

exports[`Radio Component > props.checked works fine 1`] = `
<label
  class="t-radio t-is-checked"
  tabindex="0"
>
  <input
    class="t-radio__former"
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    <!---->
  </span>
</label>
`;

exports[`Radio Component > props.checked works fine 2`] = `
<label
  class="t-radio"
  tabindex="0"
>
  <input
    class="t-radio__former"
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    <!---->
  </span>
</label>
`;

exports[`Radio Component > props.default works fine 1`] = `
<label
  class="t-radio"
  tabindex="0"
>
  <input
    class="t-radio__former"
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</label>
`;

exports[`Radio Component > props.disabled works fine 1`] = `
<label
  class="t-radio t-is-disabled"
>
  <input
    class="t-radio__former"
    disabled=""
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    
    Text
    
  </span>
</label>
`;

exports[`Radio Component > props.disabled works fine 2`] = `
<label
  class="t-radio"
  tabindex="0"
>
  <input
    class="t-radio__former"
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    
    Text
    
  </span>
</label>
`;

exports[`Radio Component > slots.default works fine 1`] = `
<label
  class="t-radio"
  tabindex="0"
>
  <input
    class="t-radio__former"
    name=""
    tabindex="-1"
    type="radio"
  />
  <span
    class="t-radio__input"
  />
  <span
    class="t-radio__label"
  >
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</label>
`;

exports[`RadioGroup Component > props.disabled is equal true 1`] = `
<div
  class="t-radio-group t-size-m t-radio-group__outline"
>
  
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="1"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="1"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio1
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="'2'"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="2"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio2
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="3"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="3"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      <span
        class="custom-node"
      >
        Radio3
      </span>
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="4"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="4"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio4
      
    </span>
  </label>
  
  <!---->
</div>
`;

exports[`RadioGroup Component > props.disabled is equal true 2`] = `
<div
  class="t-radio-group t-size-m t-radio-group__outline"
>
  
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="1"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="1"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio1
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-allow-uncheck="true"
      data-value="'2'"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="2"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio2
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="'3'"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="3"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio3
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="'4'"
      disabled=""
      name=""
      tabindex="-1"
      type="radio"
      value="4"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio4
      
    </span>
  </label>
  
  <!---->
</div>
`;

exports[`RadioGroup Component > props.name is equal to 'custom-radio-name' 1`] = `
<div
  class="t-radio-group t-size-m t-radio-group__outline"
>
  
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      data-value="1"
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="1"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio1
      
    </span>
  </label>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      data-value="'2'"
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="2"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio2
      
    </span>
  </label>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      data-value="3"
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="3"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      <span
        class="custom-node"
      >
        Radio3
      </span>
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="4"
      disabled=""
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="4"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio4
      
    </span>
  </label>
  
  <!---->
</div>
`;

exports[`RadioGroup Component > props.name is equal to 'custom-radio-name' 2`] = `
<div
  class="t-radio-group t-size-m t-radio-group__outline"
>
  
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      data-value="1"
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="1"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio1
      
    </span>
  </label>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      data-allow-uncheck="true"
      data-value="'2'"
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="2"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio2
      
    </span>
  </label>
  <label
    class="t-radio"
    tabindex="0"
  >
    <input
      class="t-radio__former"
      data-value="'3'"
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="3"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio3
      
    </span>
  </label>
  <label
    class="t-radio t-is-disabled"
  >
    <input
      class="t-radio__former"
      data-value="'4'"
      disabled=""
      name="custom-radio-name"
      tabindex="-1"
      type="radio"
      value="4"
    />
    <span
      class="t-radio__input"
    />
    <span
      class="t-radio__label"
    >
      
      Radio4
      
    </span>
  </label>
  
  <!---->
</div>
`;
